cmake_minimum_required(VERSION 3.16.3)
project(init_mig_exp_time)
find_package(OpenCV REQUIRED)
find_package(ZLIB REQUIRED)
set(XLSXWRITER_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib/libxlsxwriter)
add_executable(init_mig_exp_time main.cpp)
target_compile_options(init_mig_exp_time PRIVATE -std=c++17 -ggdb3)
include_directories(${OpenCV_INCLUDE_DIRS})
target_include_directories(init_mig_exp_time PRIVATE ${XLSXWRITER_LIB}/include)
target_link_libraries(init_mig_exp_time PRIVATE ${XLSXWRITER_LIB}/cmake/libxlsxwriter.a ${ZLIB_LIBRARIES} ${OpenCV_LIBS})